feat: add header and change main select configuration

--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
-  "name": "my-app",
+  "name": "salvador-da-pascoa-react",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.9.8",
     "@material-ui/icons": "^4.9.1",
+    "@reach/router": "^1.3.3",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "commitizen": "^4.0.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
@@ -19,6 +21,17 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "pretty-quick"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "./src/*.{js,jsx,ts,tsx}": [
+      "npx prettier --write",
+      "eslint src/*.js --fix-dry-run"
+    ]
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -36,9 +49,12 @@
     ]
   },
   "devDependencies": {
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb": "^18.1.0",
     "eslint-plugin-prettier": "^3.1.2",
     "husky": "^4.2.3",
-    "prettier": "2.0.2",
+    "lint-staged": "^10.1.1",
+    "prettier": "^2.0.2",
     "pretty-quick": "^2.0.1"
   }
 }
