--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     ]
   },
   "devDependencies": {
+    "cz-conventional-changelog": "3.1.0",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.1.0",
     "eslint-plugin-prettier": "^3.1.2",
@@ -56,5 +57,10 @@
     "lint-staged": "^10.1.1",
     "prettier": "^2.0.2",
     "pretty-quick": "^2.0.1"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
