--- a/package.json
+++ b/package.json
@@ -36,6 +36,10 @@
       "last 1 safari version"
     ]
   },
+  "engines": {
+    "node": "12.13.0",
+    "yarn": "1.x"
+  },
   "devDependencies": {
     "eslint-plugin-prettier": "^3.1.2",
     "husky": "^4.2.3",
