--- a/package.json
+++ b/package.json
@@ -11,10 +11,16 @@
     "@testing-library/user-event": "^7.1.2",
     "classnames": "^2.2.6",
     "commitizen": "^4.0.3",
+    "immutable": "^4.0.0-rc.12",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-ga": "^2.7.0",
+    "react-redux": "^7.2.0",
     "react-scripts": "3.4.1",
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-promise": "^0.6.0",
+    "redux-thunk": "^2.3.0",
     "tabletop": "^1.6.2"
   },
   "scripts": {
