feat: add login and register view

--- a/package.json
+++ b/package.json
@@ -12,10 +12,15 @@
     "axios": "^0.19.2",
     "classnames": "^2.2.6",
     "commitizen": "^4.0.3",
+    "formik": "^2.1.4",
+    "humps": "^2.0.1",
     "immutable": "^4.0.0-rc.12",
     "react": "^16.13.1",
+    "react-cookies": "^0.1.1",
     "react-dom": "^16.13.1",
+    "react-dropzone": "^10.2.2",
     "react-ga": "^2.7.0",
+    "react-input-mask": "^2.0.4",
     "react-redux": "^7.2.0",
     "react-scripts": "3.4.1",
     "redux": "^4.0.5",
