feat: work on the register view

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
+    "blueimp-load-image": "^3.0.0",
     "classnames": "^2.2.6",
     "commitizen": "^4.0.3",
     "formik": "^2.1.4",
@@ -20,6 +21,7 @@
     "react-dom": "^16.13.1",
     "react-dropzone": "^10.2.2",
     "react-ga": "^2.7.0",
+    "react-hover-image": "^1.0.1",
     "react-input-mask": "^2.0.4",
     "react-redux": "^7.2.0",
     "react-scripts": "3.4.1",
